@@ -1,5 +1,6 @@
 package com.vic.gatewayservice.Controller;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,21 +8,24 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class GatewayCorsConfig {
 
+    @Value("${frontEndUrl}")
+    private String frontEndUrl;
+
     @Bean
     public CorsWebFilter swaggerCorsFilter() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList("http://localhost:3000")); // your frontend origin
+        config.setAllowedOrigins(List.of(frontEndUrl));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 
-        // ✅ Only enable CORS for swagger /v3/api-docs paths
         source.registerCorsConfiguration("/v3/api-docs/**", config);
         source.registerCorsConfiguration("/swagger-ui/**", config);
 
